<resources>
  <string name="app_name">Hirefy</string>
  <string name="splash_description">Hirefy splash screen</string>
  <string name="login_label">Login</string>
  <string name="candidates_label">Candidates</string>
  <string name="login_success_msg">You have been successfully logged in.</string>
  <string name="login_failed_msg">Login failed</string>
  <string name="login_sign_in">Login with Google+</string>
  <string name="logout_label">Logout</string>
  <string name="interviews_label">Interviews</string>
  <string name="comments_label">Comments</string>
  <string name="resume_label">Resume</string>
  <string name="send">Send</string>
  <string name="add_comment_hint">Add comment</string>
  <string name="firstname_hint">First name</string>
  <string name="lastname_hint">Last name</string>
  <string name="position_hint">Position</string>
  <string name="submit_label">Submit</string>
  <string name="candidate_save_failed_msg">Failed to save candidate.</string>
  <string name="add_interview_hint">Add interview</string>
  <string name="no_interviews">No planned interviews</string>
  <string name="interview_type_label">Description</string>
  <string name="date_label">Choose date</string>
  <string name="time_label">Choose time</string>
  <string name="add_to_calendar_hint">Add to calendar</string>
  <string name="configure">Configure</string>
  <string name="add_widget">Add widget</string>
  <string name="no_events_list">No incoming interviews</string>
  <string name="title_widget">Interviews</string>
  <string name="create_candidate">New candidate</string>
  <string name="add_interview">Plan interview</string>
  <string name="add_candidate">Add candidate button</string>
  <string name="unknown_error">Unknown error</string>
  <string name="exception_msg">Error: %s</string>
  <string name="play_services_failed">Failed to connect to play services.</string>
  <string name="candidate_load_error_msg">Error during loading candidate information</string>
</resources>
