<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/root_view"
            android:clickable="true"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="4"
            android:alignmentMode="alignBounds"
            android:padding="@dimen/universal_padding"
            android:rowOrderPreserved="true"
            android:useDefaultMargins="true">

  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal">

    <EditText
        android:id="@+id/firstname_tv"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:hint="@string/firstname_hint"
        android:inputType="textCapWords"
        tools:text="George"/>
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal">

    <EditText
        android:id="@+id/lastname_tv"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"
        android:inputType="textCapWords"
        tools:text="Michael"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal">

    <EditText
        android:id="@+id/position_tv"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:hint="@string/position_hint"
        android:inputType="textCapWords"
        tools:text="Web Developer"/>
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/resume_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal"
      android:layout_column="0"
      android:layout_row="2"
      android:text="@string/resume_label"/>

  <TextView
      android:id="@+id/resume_tv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal"
      android:layout_column="1"
      android:layout_row="2"
      tools:text="Filename"/>

  <Button
      android:id="@+id/confirm_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill_horizontal"
      android:layout_column="1"
      android:layout_row="3"
      android:text="@string/submit_label"/>

</GridLayout>